--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	
 	header { 
 	  background: black;
-	  height: 100px;
-	  padding-top: 30px;
+	  height: 50px;
+	  padding-bottom: 30px;
 	}
 	
 	.nbar { 
@@ -25,7 +25,7 @@
 	  text-decoration: none;
 	  color: blue;
 	  font-size: 30px;
-	  line-height: 55px;
+	  line-height: 65px;
 	}
 	
 	nav > ul { /*all of the ul elements that are children of the nav*/
