--- a/index.html
+++ b/index.html
@@ -109,7 +109,6 @@
 </head>
 
 <body>
-    <!--jooolol-->
     <header>
 	<div class="nbar">
 	<nav>
@@ -126,6 +125,8 @@
     
 	</div> 
     </header>
+    
+    <div></div>
 
     <footer>&copy 2017 <a href="#">skills comp</a></footer> 
 </html>
