--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<ul>
 			<li><a href="#">Home</a></li>       
 			<li> <a href="#">About Us</a></li>
-			<li><a href="#">Photo Gallery</a></li>
+			<li><a href="part3">Photo Gallery</a></li>
 			<li><a href="#">Book</a></li>
 			<li><a href="#">Contact Us</a></li>
 		</ul>
@@ -25,7 +25,7 @@
 	</div> 
     </header>
     
-    <div></div>
-
+    <div id="part3"></div>
+    </body>
     <footer>&copy 2017 <a href="#">skills comp</a></footer> 
 </html>
