--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<input type="checkbox" id="nav" /><label for="nav"></label>
 		<ul>
 			<li><a href="#part1">Home</a></li>       
-			<li> <a href="#">About Us</a></li>
+			<li> <a href="#part2">About Us</a></li>
 			<li><a href="#part3">Photo Gallery</a></li>
 			<li><a href="#">Book</a></li>
 			<li><a href="#">Contact Us</a></li>
@@ -25,38 +25,39 @@
     </header>
 	
 	<br><br><br><br><br><br><br><br><br><br>
+	
+	
+	
+	<div id="part2">
 	<h1>What We Do</h1> 
 	<h3>Polenberg Photographic Design takes commercial, wedding, and event photos. We also do portraits and retouch images. K&H Studios offers print (including business cards) and digital services. We will also build your company's identity. If you are on the hunt for creativity, we will provide you with paintings, crafts, and jewelry. At Polenberg Educational, we teach diverse groups of people how to use their computers, their digital camera, their video camera, and how to use photo editing software.</h3>
 	
 	<div class="boxes">
+		<div class="first">
+		<h2> Testimonial </h2>
+		<p>"Like so many others as a junior in high school, I had no idea of exactly what I wanted to do for the rest of my life. I have always loved being creative, so I decided to enroll in a graphic design and photography program at my local vocational school. That is when I men my photography teacher, Howard Polenberg, and also when the path of my life began to change...He gave me the opportunity to excel in a field that I loved, and not only learn about the fundamentals of photography, but to also grow as a person through his example."</p>
+		<p>- Jennifer Andzeski, a former student</p>
+		</div>
 	
-	<div class="first">
-	<h2> Testimonial </h2>
-	<p>"Like so many others as a junior in high school, I had no idea of exactly what I wanted to do for the rest of my life. I have always loved being creative, so I decided to enroll in a graphic design and photography program at my local vocational school. That is when I men my photography teacher, Howard Polenberg, and also when the path of my life began to change...He gave me the opportunity to excel in a field that I loved, and not only learn about the fundamentals of photography, but to also grow as a person through his example."</p>
-	<p>- Jennifer Andzeski, a former student</p>
+		<div class="second">
+		<h2> Teaching Philosophy of Howard Polenberg </h2>
+		<p>As a teaching professional, my philosophy is simple yet fruitful; teaching must inspire ongoing learning while also providing fun and memorable experiences.
+		Students must be motivated and inspired by their learning experience in order to arouse an "I can't wait to get to school today and learn more" attitude from them. 
+		Vocational School teaching has given me the unique opportunity to work with students who want to learn, specifically about photography. At the Ocean County Vocational Technical School in New Jersey I am the Photography Major Instructor for the district.
+		My students are seeking direction and may be confused by the signals they get from their comprehensive high school and adult/authority figures. I talk with my students and together we approach any situation with a "lets examine the basics and work out the components to find an answer." This approach is ideal when applied to photography and also traditional subjects such as math, which I teach as well.
+		When teaching math I make it comprehensible - most students are afraid of math, especially without a calculator - I show them how all math can be broken down into components of simple addition, subtraction, multiplication and division and thus be applied to calculus and geometry.
+		I find that most people learn best hands-on. This approach to the learning experience makes it interesting and fun, causing students to want to participate and practice what they have learned. It has been proven that by repetition of a task we are able to learn and retain that information. Aside from the coursework, I intend that my teaching style be a positive example that will integrate professional and practical conduct, and problem solving skills into the students repertoire of behavioral tools for ongoing success.  I have consciously chosen to dedicate myself to steadily applying my philosophy of teaching to my students and my own creative endeavors. 
+		</p>
+		</div>
+		
+		<div class="third">
+		<h2> Testimonial </h2> 
+		<p>"Of the many teachers I've had over the years, Mr. Polenberg has been one of the best to work with. Not only does he have amazing experience as a photographer, but he is also truly gifted to be able to pass on his knowledge as effectively as he does.Mr. Polenberg goes above and beyond the duties of a teacher. It's true that there are greatly skilled teachers, that are very businesslike, who turn out fantastic students through pushing them hard and passing on much of their knowledge. Mr. P. is not a detached educator at all, and both he and his students still create lovely works." </p>
+		<p> -Samantha Kennedy, a former student </p>
+		</div>
 	</div>
-	
-	<div class="second">
-	<h2> Teaching Philosophy of Howard Polenberg </h2>
-	<p>As a teaching professional, my philosophy is simple yet fruitful; teaching must inspire ongoing learning while also providing fun and memorable experiences.
-Students must be motivated and inspired by their learning experience in order to arouse an "I can't wait to get to school today and learn more" attitude from them. 
-Vocational School teaching has given me the unique opportunity to work with students who want to learn, specifically about photography. At the Ocean County Vocational Technical School in New Jersey I am the Photography Major Instructor for the district.
-My students are seeking direction and may be confused by the signals they get from their comprehensive high school and adult/authority figures. I talk with my students and together we approach any situation with a "lets examine the basics and work out the components to find an answer." This approach is ideal when applied to photography and also traditional subjects such as math, which I teach as well.
-When teaching math I make it comprehensible - most students are afraid of math, especially without a calculator - I show them how all math can be broken down into components of simple addition, subtraction, multiplication and division and thus be applied to calculus and geometry.
-I find that most people learn best hands-on. This approach to the learning experience makes it interesting and fun, causing students to want to participate and practice what they have learned. It has been proven that by repetition of a task we are able to learn and retain that information. Aside from the coursework, I intend that my teaching style be a positive example that will integrate professional and practical conduct, and problem solving skills into the students repertoire of behavioral tools for ongoing success.  I have consciously chosen to dedicate myself to steadily applying my philosophy of teaching to my students and my own creative endeavors. 
-</p>
-	</div>
-	
-	<div class="third">
-	<h2> Testimonial </h2> 
-	<p>"Of the many teachers I've had over the years, Mr. Polenberg has been one of the best to work with. Not only does he have amazing experience as a photographer, but he is also truly gifted to be able to pass on his knowledge as effectively as he does.Mr. Polenberg goes above and beyond the duties of a teacher. It's true that there are greatly skilled teachers, that are very businesslike, who turn out fantastic students through pushing them hard and passing on much of their knowledge. Mr. P. is not a detached educator at all, and both he and his students still create lovely works." </p>
-	<p> -Samantha Kennedy, a former student </p>
-	</div>
-	
 	</div>
 
-	
-	
     <div id="part3">
    <table  align="center">
         <tr width="100px">
