--- a/index.html
+++ b/index.html
@@ -103,11 +103,10 @@
                     y2[counter2-1].style.display = "block";  
                     setTimeout(carousel2, 2000); // Change image every 2 seconds
                 }
-<<<<<<< HEAD
        </script>     
     </div>
 	
-	<div class="part4">
+	<div id="part4">
 		<h2>CONTACT US</h2>
 		<p type="Name:"><input placeholder="Write your name here.."></input></p>
 		<p type="Email:"><input placeholder="Let us know how to contact you back.."></input></p>
@@ -119,12 +118,7 @@
 		<input type = "submit" value "submit">
 		</form>
 </div>
-=======
-       </script>
-
-          
     </div>
->>>>>>> origin/master
         
 </body>
     <footer>&copy 2017 <a href="#">skills comp</a></footer> 
