added another animated banner

--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
 	</div>
 	
 	<div id="part5">
+	<img src = "animation2.gif">
 		<div id = "part52">
 		<h2>CONTACT US</h2>
 		<h6 type="Name:"><input placeholder="Write your name here.."></input></h6>
