--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
 	<div class="nbar">
 	<nav>
-		<a href="#" class="name">edu company</a>
+		<a href="index.html" class="name">edu company</a>
 		<input type="checkbox" id="nav" /><label for="nav"></label>
 		<ul>
 			<li><a href="#part1">Home</a></li>       
@@ -115,9 +115,11 @@
 		<p type="how do you want to die?:"><input placeholder="enter method here"></input></p>
 		<p type="do you want to eat your feelings in ihop?:"><input placeholder="Let us know know here"></input></p>
 		<p type="do you think bob is cool:"><input placeholder="yes or no......"></input></p>
-		<form action = "submitPage.html">
+	<div class = "form">
+		<form action = "cnsub.html">
 		<input type = "submit" value = "SUBMIT">
 		</form>
+	</div>
 		</div>
 	</div>
 	
@@ -131,7 +133,7 @@
 		<h6 type="how do you want to die?:"><input placeholder="enter method here"></input></h6>
 		<h6 type="do you want to eat your feelings in ihop?:"><input placeholder="Let us know know here"></input></h6>
 		<h6 type="do you think bob is cool:"><input placeholder="yes or no......"></input></h6>
-		<form action = "submitPage.html">
+		<form action = "cnsub.html">
 		<input type = "submit" value = "SUBMIT">
 		</form>
 		</div>
