--- a/index.html
+++ b/index.html
@@ -112,6 +112,12 @@
 		<p type="Name:"><input placeholder="Write your name here.."></input></p>
 		<p type="Email:"><input placeholder="Let us know how to contact you back.."></input></p>
 		<p type="Message:"><input placeholder="What would you like to tell us.."></input></p>
+		<p type = "Select Group: "></p>
+            <select>
+                <option value="ppd">Polenberg Photographic Design</option>
+                 <option value="pe">Polenberg Educational</option>
+                 <option value="kh">K&H Studios</option>
+            </select>
 		<p type="how do you want to die?:"><input placeholder="enter method here"></input></p>
 		<p type="do you want to eat your feelings in ihop?:"><input placeholder="Let us know know here"></input></p>
 		<p type="do you think bob is cool:"><input placeholder="yes or no......"></input></p>
