--- a/index.html
+++ b/index.html
@@ -15,28 +15,28 @@
 		<a href="index.html" class="name">edu company</a>
 		<input type="checkbox" id="nav" /><label for="nav"></label>
 		<ul>
-			<li><a href="#part1">Home</a></li>       
-			<li> <a href="#part2">About Us</a></li>
-			<li><a href="#part3">Photo Gallery</a></li>
-			<li><a href="#part4">Book</a></li>
-			<li><a href="#part5">Contact Us</a></li>
+			<li><a href="#page1">Home</a></li>       
+			<li> <a href="#page2">About Us</a></li>
+			<li><a href="#page3">Photo Gallery</a></li>
+			<li><a href="#page4">Book</a></li>
+			<li><a href="#page5">Contact Us</a></li>
 		</ul>
     </nav>
 	</div> 
     </header>
       
 	
-	<div id="part1">
+	<div id="page1">
 	<!--background image-->
 	</div>
 	
-	<div id="part2">
+	<div id="page2">
 	<h1>What We Do</h1> 
 	<h3>Polenberg Photographic Design takes commercial, wedding, and event photos. We also do portraits and retouch images. K&H Studios offers print (including business cards) and digital services. We will also build your company's identity. If you are on the hunt for creativity, we will provide you with paintings, crafts, and jewelry. At Polenberg Educational, we teach diverse groups of people how to use their computers, their digital camera, their video camera, and how to use photo editing software.</h3>
-	<img src = "animation.gif">
+	<a href = "#page4"> <img src = "animation.gif"></a>
 	</div>
 
-    <div id="part3">
+    <div id="page3">
         
     <!--  If all fails then   
    <table  align="center">
@@ -106,8 +106,8 @@
        </script>     
     </div>
 	
-	<div id="part4">
-		<div id = "part42">
+	<div id="page4">
+		<div id = "page42">
 		<h2>BOOK US</h2>
 		<p type="Name:"><input placeholder="Write your name here.."></input></p>
 		<p type="Email:"><input placeholder="Let us know how to contact you back.."></input></p>
@@ -129,9 +129,9 @@
 		</div>
 	</div>
 	
-	<div id="part5">
-	<img src = "animation2.gif">
-		<div id = "part52">
+	<div id="page5">
+	<a href = "#page5"><img src = "animation2.gif"> </a>
+		<div id = "page52">
 		<h2>CONTACT US</h2>
 		<h6 type="Name:"><input placeholder="Write your name here.."></input></h6>
 		<h6 type="Email:"><input placeholder="Let us know how to contact you back.."></input></h6>
