--- a/bkSub.html
+++ b/bkSub.html
@@ -43,11 +43,11 @@
 		<a href="index.html" class="name">edu company</a>
 		<input type="checkbox" id="nav" /><label for="nav"></label>
 		<ul>
-			<li><a href="#part1">Home</a></li>       
-			<li> <a href="#part2">About Us</a></li>
-			<li><a href="#part3">Photo Gallery</a></li>
-			<li><a href="#part4">Book</a></li>
-			<li><a href="#part5">Contact Us</a></li>
+			<li><a href="index.html#page1">Home</a></li>       
+			<li> <a href="index.html#page2">About Us</a></li>
+			<li><a href="index.html#page3">Photo Gallery</a></li>
+			<li><a href="index.html#page4">Book</a></li>
+			<li><a href="index.html#page5">Contact Us</a></li>
 		</ul>
     </nav>
 	</div> 
