--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
 	<div id="page2">
 	<h1>What We Do</h1> 
 	<h3>Polenberg Photographic Design takes commercial, wedding, and event photos. We also do portraits and retouch images. K&H Studios offers print (including business cards) and digital services. We will also build your company's identity. If you are on the hunt for creativity, we will provide you with paintings, crafts, and jewelry. At Polenberg Educational, we teach diverse groups of people how to use their computers, their digital camera, their video camera, and how to use photo editing software.</h3>
+	
+	<br><br>
+	<div class="circle">What is your preferred method of death?</div>
+	<br><br>
+	
 	<a href = "#page5"> <img src = "animation.gif"></a>
 	</div>
 
